Fix for Issues: 1.) WMS-6918 : For live list with infinite scroll type, observing console error in Safari and IE11. 2.) Live List select first item is not working when groupby is set 3.) Console errors when livelist is bound to grid and groupby is set 4.) WMS-6911 : In mobile view, added event is not visible in Wave Calendar app 5.) On view render is not working for the calendar in mobile. 6.) Style fixes for datagrid, card title alignment, segmented-content for mobile and web calendar events in mobile view 7.) Datagrid search issue
(cherry picked from commit 8567fd359e07670421191931ba6676651a39662d)

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -191,7 +191,7 @@ body {
     .app-card-header {
       display: table;
       width: 100%;
-      padding: .75rem 1.25rem;
+      padding: .75em 0.5em;
       background-color: rgba(0,0,0,0.05);
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       .app-card-avatar {
@@ -250,7 +250,7 @@ body {
     }
     .app-card-content {
       position: relative;
-      padding: 1.25rem .75rem .75rem 1.25rem;
+      padding: 1em;
     }
     .app-card-actions {
       position: relative;
@@ -273,7 +273,7 @@ body {
     }
     .card-title {
       margin-bottom: .75rem;
-      font-size: 1.5em;
+      font-size: 1.2em;
       width: 100%;
       font-weight: bold;
     }
